--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "d3": "^4.13.0",
     "express": "^4.16.2",
-    "json5": "^0.5.1"
+    "json5": "^0.5.1",
+    "skmeans": "^0.9.7"
   }
 }
