--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "movienight",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
     "buildOld": "node data/makeTopKeywords.js && node data/old/makeNetworkNodes.js && node data/old/makeNetworkLinks.js && node data/old/makeClusters.js && node data/old/MakeMultiLine.js",
     "build": "node data/buildTSNE.js"
